# lumberjack

./: .gitignore  README.md  mk-stack-yaml.hs  stack-lts-10.yaml  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-5.5.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack-lts-7.yaml  stack-lts-8.yaml  stack-lts-9.yaml  stack-template.yaml
log-level/: ChangeLog.md  log-level.cabal
log-level/src/Data/LogLevel/: Classes.hs  Common.hs  Extensible.hs  Syslog.hs
logstr/: ChangeLog.md  README.md  logstr.cabal
logstr/src/Data/: LogStr.hs
logstr/src/Data/LogStr/: Class.hs  Formatting.hs  Internal.hs
logstr/src/Data/LogStr/Formatting/: Internal.hs
logstr/test/: TestCase.hs  unit-tests.hs
logstr/test/TestCase/Data/LogStr/: Internal.hs
lumberjack-core/: README.md  lumberjack-core.cabal  lumberjack-types.cabal
lumberjack-core/examples/: implicit-parameters.hs  monad-transformer.hs  reflection.hs
lumberjack-core/src/Control/Monad/: Logger.hs
lumberjack-core/src/Control/Monad/Logger/: Class.hs  Internal.hs
lumberjack-core/src/System/: Lumberjack.hs
lumberjack-core/src/System/Lumberjack/: Backend.hs  Boilerplate.hs  Location.hs  LogLevel.hs  LogStr.hs  PushLog.hs
lumberjack-core/src/System/Lumberjack/LogStr/: Exception.hs  Internal.hs
lumberjack-fast-logger/: README.md  lumberjack-fast-logger.cabal
lumberjack-fast-logger/src/System/Lumberjack/: FastLogger.hs
lumberjack-fast-logger/src/System/Lumberjack/FastLogger/: Internal.hs
lumberjack-types/: README.md  lumberjack-types.cabal
lumberjack-types/src/Data/Lumberjack/: BackEnd.hs  Backend.hs  LogLevel.hs  LogStr.hs
lumberjack-types/src/System/Lumberjack/: Backend.hs  LogStr.hs
