name:                   logstr
version:                0.1.0.0
synopsis:
  Logging message builder with O(1) length operation.
-- description:
homepage:               https://github.com/trskop/lumberjack
bug-reports:            https://github.com/trskop/lumberjack/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015-2016, Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , LICENSE.fast-logger
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.LogStr
    , Data.LogStr.Class
    , Data.LogStr.Internal
    , Data.LogStr.Formatting
    , Data.LogStr.Formatting.Internal
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:
      CPP
    , DeriveDataTypeable
    , DeriveGeneric
    , FlexibleInstances
    , NoImplicitPrelude
    , TypeFamilies

  build-depends:
      base >=4.8 && <4.9
    , bytestring >=0.10 && <0.11
    , text ==1.1.* || ==1.2.*
    , case-insensitive >=0.1 && <2
    -- ^ Only minimal and stable parts of case-insensitive API are used.

    , base16-bytestring >=0.1.1.0 && <0.2
    -- ^ Version 0.1.1.0 is the first that introduced module
    -- "Data.ByteString.Base16.Lazy".
    , data-default-class ==0.0.*
    , HoleyMonoid ==0.1.1
    , log-level ==0.1.*
    , number-length ==0.*
    , tagged >=0 && <1
    -- ^ Only Tagged data type is used.

  if impl(ghc <8)
    build-depends:      semigroups >=0.16 && <1

  ghc-options:          -Wall -fwarn-tabs
  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror

test-suite unit-tests
  hs-source-dirs:       src, test
  type:                 exitcode-stdio-1.0
  main-is:              unit-tests.hs
  other-modules:
      TestCase

  default-language:     Haskell2010
  other-extensions:     DefaultSignatures, NoImplicitPrelude

  build-depends:
      base >=4.8 && <4.9
    , bytestring >=0.10 && <0.11
    , text ==1.1.* || ==1.2.*
    , case-insensitive >=0.1 && <2
    -- ^ Only minimal and stable parts of case-insensitive API are used.

    , base16-bytestring >=0.1.1.0 && <0.2
    -- ^ Version 0.1.1.0 is the first that introduced module
    -- "Data.ByteString.Base16.Lazy".
    , data-default-class ==0.0.*
    , HoleyMonoid ==0.1.1
    , log-level ==0.1.*
    , number-length ==0.*
    , tagged >=0 && <1
    -- ^ Only Tagged data type is used.

    -- {{{ Test-suite dependencies --------------------------------------------
    , HUnit >=1.2 && <2
      -- ^ Same constraints as test-framework-hunit
    , QuickCheck >=2.6 && <2.9
      -- ^ Same constraints as test-framework-quickcheck2==0.3.0.3.
    , quickcheck-instances >=0.3.2 && <1
    , test-framework >=0.8 && <1
      -- ^ Same constraint as test-framework-skip, other packages that
      -- depend on it have less restrictive bounds.
    , test-framework-hunit >=0.2.6 && <1
      -- ^ Lower versions have more restrictive bounds on test-framework.
    , test-framework-quickcheck2 >=0.3 && <1
      -- ^ There were changes in QuickCheck bounds in 0.2 branch and last one
      -- on it had a compilation failure on Hackage.
      -- }}} Test-suite dependencies ------------------------------------------

  if impl(ghc <8)
    build-depends:      semigroups >=0.16 && <1

  ghc-options:          -Wall -fwarn-tabs
  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
