name:                   lumberjack-core
version:                0.1.0.0
synopsis:
  Generic, extensible and easy to use API for logging frameworks.
-- description:            TODO
homepage:               https://github.com/trskop/lumberjack
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015, Peter Trško
category:               System, Logging
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , LICENSE.fast-logger
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:      src
  exposed-modules:
      System.Lumberjack
    , System.Lumberjack.Backend
--  , System.Lumberjack.LogFunction
    , System.Lumberjack.LogLevel
--  , System.Lumberjack.LogSource
    , System.Lumberjack.LogStr
    , System.Lumberjack.PushLog
  -- other-modules:

  default-language:    Haskell2010
  other-extensions:
      CPP
    , DeriveDataTypeable
    , DeriveGeneric
    , FlexibleInstances
    , LambdaCase
    , NoImplicitPrelude
    , TemplateHaskell
    , TypeFamilies

  build-depends:
      base >=4.7 && <4.9
    , bytestring ==0.10.*
    , text ==1.1.* || ==1.2.*
    , template-haskell ==2.9.* || ==2.10.*

    , data-default-class ==0.0.*
    , tagged
    , number-length

  ghc-options:
    -Wall
    -fwarn-tabs

  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
