name:                   lumberjack-core
version:                0.1.0.0
synopsis:
  Generic, extensible and easy to use API for logging frameworks.
description:
  This library provides basic data types, generic API for logging backends, and
  Monad that adds logging support by providing abstract access to logging
  backend.

homepage:               https://github.com/trskop/lumberjack
bug-reports:            https://github.com/trskop/lumberjack/issues
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015-2016, Peter Trško
category:               System, Logging
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag with-exceptions
  description:
    Provide instances for MonadThrow, MonadCatch and MonadMask type classes
    which are defined in exceptions package.

  default:              True
  manual:               False

flag with-mtl
  description:
    Provide instances for type classes defined in mtl package.

  default:              True
  manual:               False

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Control.Monad.Logger
    , Control.Monad.Logger.Class
    , Control.Monad.Logger.Internal
    , System.Lumberjack
    , System.Lumberjack.Backend
    , System.Lumberjack.Location
--  , System.Lumberjack.LogFunction
--  , System.Lumberjack.LogSource
    , System.Lumberjack.LogStr.Exception
    , System.Lumberjack.PushLog
  -- other-modules:

  default-language:     Haskell2010
  other-extensions:
      CPP
    , DeriveDataTypeable
    , DeriveGeneric
    , FlexibleInstances
    , LambdaCase
    , NoImplicitPrelude
    , TemplateHaskell
    , TypeFamilies

  build-depends:
      base >=4.7 && <4.9
    , bytestring ==0.10.*
    , text ==1.1.* || ==1.2.*
    , template-haskell ==2.9.* || ==2.10.*
    , transformers >=0.2 && <0.5
    -- ^ Version 0.2 was the first that introduced Control.Monad.IO.Class and
    -- Control.Monad.Trans.Class modules.

    , between >=0.10.0.0
    -- ^ This package uses strict API which was introduced in version 0.10.0.0.
    , data-default-class ==0.0.*
    , log-level ==0.1.*
    , logstr ==0.1.*
    , mmorph ==1.*
    , number-length
    , tagged

  if flag(with-exceptions)
    build-depends:      exceptions >=0.1 && <0.9
    -- ^ Version 0.9 may be too restrictive, since type class API of exceptions
    -- package look to be stable.
    cpp-options:        -DWITH_exceptions

  if flag(with-mtl)
    build-depends:      mtl >=2.0.0.0 && <3
    -- ^ Version 2.0.0.0 is the first one that depends on transformers package.
    cpp-options:        -DWITH_mtl

  if impl(ghc <8)
    build-depends:      semigroups >=0.17 && <1

  if impl(ghc >=7.10)
    cpp-options:        -DAPPLICATIVE_MONAD

  ghc-options:
    -Wall
    -fwarn-tabs

  if flag(pedantic)
    ghc-options:
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
