name:                   lumberjack-fast-logger
version:                0.1.0.0
synopsis:               FastLogger backend for Lumberjack logging framework.
-- description:
homepage:               https://github.com/trskop/lumberjack
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2015, 2018 Peter Trško
category:               System
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     ChangeLog.md, README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      System.Lumberjack.FastLogger
    , System.Lumberjack.FastLogger.Internal

  default-language:     Haskell2010
  other-extensions:
      DeriveDataTypeable
    , DeriveGeneric
    , NamedFieldPuns
    , NoImplicitPrelude
    , RecordWildCards

  build-depends:
      base >=4.7 && <5

    , data-default-class ==0.*
    , fast-logger ==2.4.*

    , lumberjack-core ==0.1.*

  ghc-options:          -Wall
  if flag(pedantic)
    if impl(ghc >=8)
      ghc-options:
        -Wcompat
        -Wimplicit-prelude
        -Wmissing-import-lists
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monoid-instances
        -Werror
    else
      ghc-options:
        -fwarn-implicit-prelude
        -fwarn-missing-import-lists
--      -Werror
